# GCVEXA

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup.sh
.github/workflows/: ci.yml
gcv/backend/: Dockerfile  pytest.ini
gcv/backend/app/: .env.example  main.py  requirements.txt
gcv/backend/app/api/: deps.py
gcv/backend/app/collectors/: file_collector.py
gcv/backend/app/core/: config.py  oauth.py  scheduler.py  security.py
gcv/backend/app/crud/: asset.py  collector.py  customization.py  playbook.py  reporting.py  role.py  scan.py  scanner_config.py  user.py  vulnerability.py
gcv/backend/app/db/: session.py
gcv/backend/app/models/: asset.py  collector.py  customization.py  playbook.py  reporting.py  role.py  scan.py  scanner_config.py  user.py  vulnerability.py  vulnerability_event.py
gcv/backend/app/parsers/: burpsuite_parser.py  dispatcher.py
gcv/backend/app/schemas/: asset.py  customization.py  dashboard.py  mfa.py  playbook.py  reporting.py  scan.py  scanner_config.py  token.py  user.py  vulnerability.py
gcv/backend/app/services/: email_service.py  gvm_service.py  pdf_service.py  playbook_service.py  reporting_tasks.py  scan_service.py  semgrep_parser.py  semgrep_service.py  sonarqube_parser.py  sonarqube_service.py  zap_parser.py  zap_service.py
gcv/backend/app/tests/: conftest.py  test_auth.py  test_login.py  test_scans.py
gcv/backend/src/: main.py
gcv/backend/src/core/: encryption.py  scheduler.py
gcv/backend/src/crud/: asset.py
gcv/backend/src/models/: playbook.py
gcv/backend/src/schemas/: collector.py  playbook.py
gcv/backend/src/services/: ai_service.py
gcv/backend/src/tests/: conftest.py  test_login.py
gcv/frontend/: Dockerfile  Dockerfile.prod  nginx.conf  package-lock.json  package.json
gcv/frontend/src/: App.jsx  main.jsx
gcv/frontend/src/components/: AdminRoute.jsx  SetupGuard.jsx
gcv/frontend/src/context/: AuthContext.jsx  CustomizationContext.jsx  SetupContext.jsx
gcv/frontend/src/hooks/: useFetchData.js
gcv/frontend/src/pages/: AccountSecurityPage.jsx  AssetDetailPage.jsx  AssetsPage.jsx  CustomizationPage.jsx  DashboardPage.jsx  ImportScanPage.jsx  LoginCallbackPage.jsx  LoginPage.jsx  PlaybooksPage.jsx  ReportsPage.jsx  ScanDetailPage.jsx  ScannerConfigsPage.jsx  ScansPage.jsx  SetupWizardPage.jsx  (+2 more)
test_project/: pyproject.toml
test_project/tests/: test_main.py
(+22 files in other folders)
